re#1393 re#1376 benefits bar not centered fix

--- a/skin/frontend/modago/default/sass/design/style/_benefits.scss
+++ b/skin/frontend/modago/default/sass/design/style/_benefits.scss
@@ -1,9 +1,9 @@
 body.zolagomodago-index-index .benefits {
 	padding: 0 !important;
-	margin: 30px 0 10px 0 !important;
+	margin: 30px auto 10px 0 !important;
 	max-width: 1230px;
 	@media(max-width: $screen-sm-max) {
-		margin: 15px 0 -15px !important;
+		margin: 15px auto -15px !important;
 	}
 }
 
